infra/argocd/kustomize/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-to-https-redirect
  namespace: argocd
spec:
  hostnames:
    - argocd.plateng.fhbgl.study
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: gateway-system
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
    matches:
        - path:
            type: PathPrefix
            value: /
